bugfix for package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Indigo - Minimalist Jekyll Template",
+  "name": "indigo",
   "version": "0.1.0",
   "main": "gulpfile.js",
   "repository": {
