new light version - removing gemfile.lock
new light version - adding travis file

new light version - adding branch to travis file

new light version - updating travis configs

new light version - removing travis extra file

new light version - removing extra configs

new light version - readding travis file

new light version - updating readme

new light version - adding rakefile

new light version - updating config.yml

new light version - updating travis

fixing travis

updating gemfile

removing jekyll-admin from build

fixing html-proofeer

adding jekyll admin

jekyll-admin as group

removing jekyll admin

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "indigo",
   "version": "1.0.0",
+  "homepage": "https://github.com/sergiokopplin/indigo#readme",
+  "license": "MIT",
+  "bugs": {
+      "url": "https://github.com/sergiokopplin/indigo/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sergiokopplin/indigo.git"
   },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sergiokopplin/indigo/issues"
-  },
-  "homepage": "https://github.com/sergiokopplin/indigo#readme",
   "scripts": {
     "build": "bundle exec jekyll build",
     "serve": "bundle exec jekyll serve",
-    "test": "bundle exec htmlproof ./_site"
+    "test": "bundle exec htmlproofer ./_site"
   }
 }
